# powergrid

./: .gitignore  INTEGRATION_TESTS_SUMMARY.md  README.md  TASKS_WEEK_3-4.md  TESTING_SUMMARY.md  TEST_SUMMARY.md  TEST_SUMMARY_FINAL.md  debug_action_spaces.py  debug_device_spaces.py  debug_rewards.py  environment.yml  pyproject.toml  quick_start.py  requirements.txt  setup.py  test_train_mappo.sh  test_training.py  test_training_simple.py
.claude/: settings.local.json
data/: read_data.py
deprecated/: base.py  base_env.py  ieee.py
docs/: ARCHITECTURE_COMPARISON.md  DEPRECATION_SUMMARY.md  DEVICEAGENT_CLEANUP.md  GRIDENV_VS_GRIDAGENT.md  TODO.md  VERIFICATION.md  conf.py  multi_agent_quickstart.md  protocol_guide.md
docs/design/: COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  TODO.md  architecture_diagrams.md  current_design.mmd  proposal.md  publication_roadmap.md  week3-4_implementation_plan.md
docs/source/: Architecture_Agent_Data_Flow.md  README.md  agent_abstraction.md  conf.py  index.rst  protocol_guide.rst
examples/: agent_demo.py  ieee13bus.py  test_action.py  test_device_state.py  train.py  train_mappo_microgrids.py  verify_training_script.py
examples/features/: connection.py  inverters.py  phase_spec.py  status_block.py  storage_block.py  tap.py  thermal_loading.py
examples/multi_agent/: p2p_trading_3mg.py  simple_2mg.py
micpopt/: multi_agent_mgs.py
microgrid/cigre_mv/: dreamer_train.py  ppo_train.py  sac_train.py  testing_results.py
microgrid/ieee13/: dreamer_train.py  misocp.py  ppo_train.py  sac_train.py  testing_results.py
microgrid/ieee34/: dreamer_train.py  ppo_train.py  sac_train.py  test_utils.py  testing_results.py
microgrid/misocp/: cigre_mv_misocp.pkl  data_io.py  ieee13_misocp.pkl  net_loader.py  run.py  run_cigre_mv_default.sh  run_ieee13_default.sh  run_ieee34_default.sh  solver.py
microgrid/plot/: heatmap.py  plot_ieee34_schedules.py  plot_testing_results.py  plot_training_results.py  utils_plot.py
powergrid/: __init__.py  base_env.py  core.py
powergrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
powergrid/agents/: README.md  __init__.py  base.py  device_agent.py  grid_agent.py  policies.py  protocols.py  spaces.py
powergrid/core/: action.py  actions.py  policies.py  protocols.py  state.py  typing.py  utils.py
powergrid/data/: data_loader.py
powergrid/devices/: __init__.py  base.py  compensation.py  generator.py  grid.py  storage.py  transformer.py
powergrid/envs/: __init__.py  base_env.py  utils.py
powergrid/networks/: ieee123.py  ieee13.py  ieee34.py  modified_cigre_mv.py
powergrid/optimization/: __init__.py  misocp.py  misocp_ieee123.py
powergrid/powergrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
powergrid/test/: test_generator.py
powergrid/utils/: __init__.py  array_utils.py  cost.py  (+5 more)
rllib_marl/: independent_ppo.py  mappo_parameter_sharing.py  multi_agent_mgs.py
tests/: __init__.py  test_grid.py  test_pettingzoo_env.py  test_protocols.py  test_storage.py
(+151 files in other folders)
